--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">AndroidHeroSamples</string>
     <string name="android">Android</string>
     <string name="my_android_textview">波多野结衣波多野结衣波多野结衣波多野结衣</string>
+
+    <string-array name="recycler_list">
+        <item>LinearLayoutManager</item>
+        <item>GridLayoutManager</item>
+    </string-array>
 </resources>
